Fixed on hover buttons on mobile devices

--- a/src/app/scss/blocks/main/header/_header-buttons.scss
+++ b/src/app/scss/blocks/main/header/_header-buttons.scss
@@ -14,7 +14,12 @@
   @include respond-to(xs) {
     width: 52px;
   }
-  &:hover {color: #7cbe31;}
+  &:hover {
+    color: $icon-chevron-color;
+    @include respond-to(sm) {
+      color: #7cbe31;
+    }
+  }
   &.inverse {
     background: #fff;
   }
